<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="2dp">

    <TextView
        android:id="@+id/from"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_toLeftOf="@id/time"
        android:gravity="left"
        android:text="@string/from" />

    <TextView
        android:id="@+id/to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/from"
        android:layout_alignParentStart="true"
        android:layout_toStartOf="@id/status"
        android:gravity="left"
        android:text="@string/sent_to" />

    <TextView
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:gravity="center_horizontal"
        android:text="@string/at" />

    <TextView
        android:id="@+id/status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/time"
        android:layout_alignParentEnd="true"
        android:gravity="center_horizontal"
        tools:text="Status" />

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/status"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="5dp"
        android:gravity="left"
        android:textStyle="bold"
        tools:text="TextView" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/message"
        android:background="@android:color/holo_blue_dark" />
</RelativeLayout>
